--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="todo_container">
-        <div class="header_container">
+        <div class="header-container">
             <input type="text" class="todo_input"> 
             <input id="date" type="date" value="2022-02-01">
             <select name="todo_type" id="type">
+                <option value="" disabled selected>Select importance</option>
                 <option value="usual">usual</option>
                 <option value="important">important</option>
             </select>
@@ -20,16 +21,16 @@
             <button class="todo_save">Save</button>
             <button class="todo_load">Load</button>
         </div>
-        <div class="todo_list">
-            <div class="todo_item">
+        <div class="todo-list">
+            <div class="todo-list__item usual">
                 <div class="todo_item_text">Example</div>
                 <div class="todo_item_date">2022-02-01</div>
-                <div class="todo_item_delete">&#128465;</div>
+                <div class="todo_item_delete"><img src="cross.svg" alt="delte"></div>
             </div>
-            <div class="todo_item">
+            <div class="todo-list__item important">
                 <div class="todo_item_text">Example</div>
                 <div class="todo_item_date">2022-02-02</div>
-                <div class="todo_item_delete">&#128465;</div>
+                <div class="todo_item_delete"><img src="cross.svg" alt="delte"></div>
             </div>
         </div>
     </div>
